# koclaw

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.computer_use  Dockerfile.sandbox  README.md  docker-compose.ollama.yml  docker-compose.yml  main.py  mcp_servers.json.example  pyproject.toml  start.sh
.claude/: github-strategy.md
.claude/skills/lint/: SKILL.md
.claude/skills/new-tool/: SKILL.md
.claude/skills/pr/: SKILL.md
.claude/skills/test/: SKILL.md
.github/workflows/: ci.yml
docker/: computer_use_startup.sh
docs/channels/: discord.md  slack.md  telegram.md
koclaw/: app.py  sandbox_runner.py
koclaw/channels/: __init__.py  discord.py  slack.py  telegram.py
koclaw/core/: agent.py  computer_use_manager.py  config.py  file_parser.py  llm.py  mcp_loader.py  memory_context.py  prompt_guard.py  sandbox.py  scheduler_loop.py  tool.py  webhook_server.py  windows_computer_use_manager.py
koclaw/providers/: azure_openai.py  claude.py  gemini.py  ollama.py  openai.py
koclaw/storage/: db.py
koclaw/tools/: browse.py  browser.py  calendar.py  computer_use.py  delegate.py  docker_logs.py  email.py  execute_code.py  file.py  memory.py  rss.py  scheduler.py  search.py  weather.py  webhook.py  windows_file.py  windows_shell.py  youtube.py
tests/: conftest.py  test_agent.py  test_app.py  test_browse.py  test_browser.py  test_calendar.py  test_channel_router.py  test_computer_use.py  test_db.py  test_delegate.py  test_discord.py  test_docker_logs.py  test_email.py  test_execute_code.py  test_file_parser.py  test_file_tool.py  test_llm.py  test_mcp_loader.py  test_memory_context.py  test_prompt_guard.py  test_providers.py  test_rss.py  test_sandbox.py  test_sandbox_runner.py  test_scheduler.py  test_scheduler_loop.py  test_slack.py  test_telegram.py  test_tool.py  test_tools.py  test_weather.py  test_webhook.py
windows_agent/: install.ps1  server.py
